# AlgoData

./: .gitignore  CMakeLists.txt  README.md
01_algorithms/: CMakeLists.txt
01_algorithms/include/: factorial.h  guessing_game.h  hanoi.h
01_algorithms/src/: example_factorial.c  example_hanoi.c  exercise_1-2.c  exercise_1-3.c  factorial.c  guessing_game.c  hanoi.c
02_datastructures/: CMakeLists.txt
02_datastructures/include/: array.h  binary_tree.h  circular_array.h  list.h  queue.h  stack.h
02_datastructures/src/: array.c  binary_tree.c  circular_array.c  exercise_2-1-extra.c  exercise_2-1.c  exercise_2-2.c  exercise_2-3.c  exercise_2-4.c  list.c  queue.c  stack.c
03_sorting/: CMakeLists.txt
03_sorting/include/: array_utility.h  bubblesort.h  bucketsort.h  countingsort.h  heap_sort.h  heapsort.h  insertsort.h  merge_sort.h  mergesort.h  quicksort.h  selectsort.h
03_sorting/python/: bubblesort.py  comparison_heapsort_vs_bubblesort.py  heapsort.py
03_sorting/src/: array_utility.c  bubblesort.c  bucketsort.c  countingsort.c  example_3-2.c  example_countingsort.c  exercise_3-1.c  heap_sort.c  heapsort.c  insertsort.c  main_bucketsort.cpp  main_radixsort.cpp  merge_sort.c  mergesort.c  quicksort.c  radixsort.c  selectsort.c
04_searching/: CMakeLists.txt
04_searching/include/: listsearch.h  strfind.h
04_searching/python/: hash_functions.py
04_searching/src/: example_listsearch.c  example_strfind.c  listsearch.c  strfind.c
ssh/: config  id_rsa_pi_lab
